--- a/Desafiocordel/desafiocordel.css
+++ b/Desafiocordel/desafiocordel.css
@@ -1,1 +1,32 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+body{
+    margin: 0px;
+}
+header{
+    height: 250px;
+    background-color: black;
+}
+span{
+    font-size: 8rem;
+}
+h1{
+    font-family: 'Passion One';
+    font-size: 85px;
+    position: absolute;
+    top: 18%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 0px;
+    color: white;
+    letter-spacing: 2px;
+}
+p{  
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    color: white;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
