--- a/Desafiocordel/desafiocordel.css
+++ b/Desafiocordel/desafiocordel.css
@@ -1,11 +1,13 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 body{
     margin: 0px;
 }
 header{
     height: 250px;
     background-color: black;
+    text-align: center;
 }
 span{
     font-size: 8rem;
@@ -13,20 +15,27 @@ span{
 h1{
     font-family: 'Passion One';
     font-size: 85px;
-    position: absolute;
-    top: 18%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: 0px;
+    margin: 0px;
     color: white;
     letter-spacing: 2px;
+    padding-top: 30px;
 }
-p{  
+header>p{  
     font-family: Verdana, sans-serif;
     font-size: 16px;
     color: white;
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+}
+.cursivopreto{
+    color: black;
+    font-family: 'Sriracha';
+    font-size: 46px;
+    padding: 5px;
+    margin: 30px;
+}
+.cursivobranco{
+    color: black;
+    font-family: 'Sriracha';
+    font-size: 46px;
+    padding: 5px;
+    margin: 30px;
 }
