--- a/Desafiocordel/desafiocordel.css
+++ b/Desafiocordel/desafiocordel.css
@@ -4,6 +4,11 @@
 body{
     margin: 0px;
 }
+div{
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    color: white;
+}
 header{
     height: 250px;
     background-color: black;
@@ -20,11 +25,6 @@ h1{
     letter-spacing: 2px;
     padding-top: 30px;
 }
-header>p{  
-    font-family: Verdana, sans-serif;
-    font-size: 16px;
-    color: white;
-}
 .cursivopreto{
     color: black;
     font-family: 'Sriracha';
@@ -33,9 +33,33 @@ header>p{
     margin: 30px;
 }
 .cursivobranco{
-    color: black;
+    color: white;
     font-family: 'Sriracha';
     font-size: 46px;
     padding: 5px;
-    margin: 30px;
+    margin: 0px;
+    background-image: url(imagens/background001.jpg);
+    background-size: 100% ;
+    background-attachment: fixed;
+}
+#folha{
+    background-image: url(imagens/background002.jpg);
+}
+p{
+    background-color: rgba(128, 128, 128, 0.705);
+    width: 600px;
+    margin-left: 30px; ;
+}
+footer{
+    background-color: black;
+    padding: 10px;
+    color: white;
+    text-align: center;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+a:hover{
+    color: gray;
 }
